Added matrix, image and colorspace objects

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "A library for powerful image processing on the web.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jasmine JASMINE_CONFIG_PATH=specs/jasmine.json"
   },
   "repository": {
     "type": "git",
@@ -23,5 +23,12 @@
   "bugs": {
     "url": "https://github.com/lasalvavida/visionjs/issues"
   },
-  "homepage": "https://github.com/lasalvavida/visionjs#readme"
+  "homepage": "https://github.com/lasalvavida/visionjs#readme",
+  "dependencies": {
+    "defaults": "1.0.3",
+    "defined": "^1.0.0"
+  },
+  "devDependencies": {
+    "jasmine": "2.5.2"
+  }
 }
