--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "visionjs",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "A library for powerful image processing on the web.",
   "main": "index.js",
   "scripts": {
-    "jshint" : "jshint **/*.js",
+    "jshint": "jshint **/*.js",
     "test": "jasmine JASMINE_CONFIG_PATH=specs/jasmine.json"
   },
   "repository": {
@@ -26,14 +26,13 @@
   },
   "homepage": "https://github.com/lasalvavida/visionjs#readme",
   "dependencies": {
-    "defaults": "^1.0.3",
-    "defined": "^1.0.0"
+    "defaults": "^1.0.3"
   },
   "devDependencies": {
     "jasmine": "^2.5.2",
     "jshint": "^2.9.3"
   },
-  "jshintConfig" : {
-    "node" : true
+  "jshintConfig": {
+    "node": true
   }
 }
