--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visionjs",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "A library for powerful image processing on the web.",
   "main": "index.js",
   "scripts": {
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/lasalvavida/visionjs#readme",
   "dependencies": {
+    "bluebird": "^3.4.6",
     "defaults": "^1.0.3"
   },
   "devDependencies": {
