--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/lasalvavida/visionjs#readme",
   "dependencies": {
     "bluebird": "^3.4.6",
+    "clone": "^2.0.0",
     "defaults": "^1.0.3"
   },
   "devDependencies": {
