--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visionjs",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "A library for powerful image processing on the web.",
   "main": "index.js",
   "scripts": {
@@ -28,7 +28,8 @@
   "dependencies": {
     "bluebird": "^3.4.6",
     "clone": "^2.0.0",
-    "defaults": "^1.0.3"
+    "defaults": "^1.0.3",
+    "defined": "^1.0.0"
   },
   "devDependencies": {
     "jasmine": "^2.5.2",
