--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "visionjs",
-  "version": "0.0.26",
+  "version": "0.0.27",
   "description": "A library for powerful image processing on the web.",
   "main": "index.js",
   "scripts": {
@@ -26,14 +26,14 @@
   },
   "homepage": "https://github.com/lasalvavida/visionjs#readme",
   "dependencies": {
-    "bluebird": "^3.4.6",
-    "clone": "^2.0.0",
-    "defaults": "^1.0.3",
-    "defined": "^1.0.0"
+    "bluebird": "3.4.6",
+    "clone": "2.0.0",
+    "defaults": "1.0.3",
+    "defined": "1.0.0"
   },
   "devDependencies": {
-    "jasmine": "^2.5.2",
-    "jshint": "^2.9.3"
+    "jasmine": "2.5.2",
+    "jshint": "2.9.3"
   },
   "jshintConfig": {
     "node": true
